force-app/main/default/objects/Recon_Work_Order__c/Recon_Work_Order__c.object-meta.xml
<CustomObject>
    <label>Recon Work Order</label>
    <nameField>
        <displayFormat>RWO-{00000}</displayFormat>
        <label>Recon Work Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recon Work Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>