force-app/main/default/objects/Recon_Work_Order__c/fields/Total_Recon_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Recon_Cost__c</fullName>
    <label>Total Recon Cost</label>
    <summarizedField>Recon_Line_Item__c.Cost__c</summarizedField>
    <summaryForeignKey>Recon_Line_Item__c.Work_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>