force-app/main/default/objects/Recon_Work_Order__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Recon Work Orders</relationshipLabel>
    <relationshipName>Recon_Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>